# supplementary-contours

./: .gitattributes  .gitignore  README.md  WidthEstimator.pyd  WidthEstimator3.pyd  numpyctypes.py  supplementary-contours.CalculateCentrality.pyt.xml  supplementary-contours.CalculateWidth.pyt.xml  supplementary-contours.RegionWidth.pyt.xml  supplementary-contours.SupplContours.pyt.xml  supplementary-contours.SupplContoursFull.pyt.xml  supplementary-contours.SupplementaryContours.pyt.xml  supplementary-contours.SupplementaryContoursFull.pyt.xml  supplementary-contours.WidthCentralityMask.pyt.xml  supplementary-contours.pyt  supplementary-contours.pyt.xml
WidthEstimator/: WidthEstimator.cpp
arcgisgpro/: WidthEstimator.pyd
backup/: supplementary-contours.CalculateCentrality.pyt.xml  supplementary-contours.Centrality.pyt.xml  supplementary-contours.GenerateBorders.pyt.xml  supplementary-contours.GenerateWidthCentralityMask.pyt.xml  supplementary-contours.RegionBorders.pyt.xml  supplementary-contours.SupplContours.pyt.xml  supplementary-contours.SupplementaryContours.pyt.xml  supplementary-contours.SupplementaryContoursFull.pyt.xml  supplementary-contours.WidthCentralityMask.pyt.xml  supplementary-contours.pyt  supplementary-contours.pyt.xml
data/: DEM0.tif  DEM1.tif  DEM2.tif  DEM3.tif  DEM3.tif.aux.xml  DEM4.tif  DEM5.tif  DEM6.tif  (+1 more)
src/: CMakeLists.txt  TestWidthEstimator.py  Thumbs.db  WidthEstimator.R  WidthEstimator.cpp  euc.tif  euc.tif.aux.xml  euc1.tif.aux.xml  euc2.tif.aux.xml  setup.py  width.tfw  width.tif  width.tif.aux.xml  width.tif.ovr  width.tif.xml
(+6 files in other folders)
